--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/build/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -23,3 +24,12 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+# Docker
+docker-compose.override.yml
+db_data/
+
+# IDE/Editor
+*.idea
+*.vscode
+*.DS_Store
